--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,19 @@
 .background {
     background-image: linear-gradient( to bottom, #f39223, #ffffff);
-    max-width: 700px;
+    max-width: 705px;
     width: 100%;
     margin: 0 auto;
     padding: 30px 0;
 }
 
 img {
-    height: 60px;
+    height: 72px;
     width: auto;
     padding: 0 20px;
+}
+
+#grassland-image {
+    margin-left: -20px;
 }
 
 #left {
@@ -22,6 +26,7 @@ img {
 
 .card {
     background-color: transparent;
+    border-color: transparent;
 }
 
 #header {
